1999-01-27  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Makefile.am (dist-snapshot): New target.

	* simple.c (simple_draw_clock): Modify the look.
	(simple_draw_clock): Fix the test condition.

1999-01-25  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* simple.c (simple_draw_clock): Mark every hours.

	* glclock.cc (describe): Add a call to show_about.

	* Makefile.am (rglclock_SOURCES): Add about.cc.
	* about.cc: New file.

	* simple.c (simple_draw_clock): Modify parameters.
	(simple_draw_clock): Use the model local viewer by default.

	* module.cc (draw_clock): Move the core code to simple.c.
	(init): Likewise.

	* simple.c (simple_draw_clock, simple_init): New functions.
	* simple.h: Updated with the prototype decl.

1999-01-24  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* glclock.cc (glclock): Use "Exit" for the menu label instead of
	"Quit".  Fill values in menu items.

	* module.cc: Remove #define _GNU_SOURCE.

	* simple.h: New file.
	* simple.c: New file.
	
	* configure.in: Add the config header.

	* acconfig.h: New file.
	* config.h.in: Generated by autoheader.

	* gdkgl.c [HAVE_CONFIG_H]: Include "config.h".

	* NEWS: Updated.

1999-01-23  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* AUTHORS: Updated.

	* main.cc: Do not define _GNU_SOURCE.
	(main): Choose an appropriate visual.

	* glclock.h: Include "gdkgl.h".  Reorder #include's.

	* glclock.cc: Do not define _GNU_SOURCE.
	Include "gdkgl.h".  Reorder #include's.
	(update): Use "gdkgl.h" function.
	(handle_configure_event): Likewise.

	* configure.in: Remove gdkGL/Makefile from output.

	* Makefile.am (rglclock_SOURCES): Add gdkgl.c.
	(rglclock_LDADD): Remove gdkGL/libgdkGL.a.
	(noinst_HEADERS): Add gdkgl.h.
	(SUBDIRS): Removed.

	* main.cc (parse_options): New function.
	(main): Add option parsing.

	* glclock.h: Include <gtk/gtkmenufactory.h>.

	* configure.in: Change the version number system.
	Remove unneeded blank lines.
	Define _GNU_SOURCE.
	Add checks for <getopt.h> and getopt_long.